# jiip

./: .gitignore
Vector homework/: CMakeLists.txt
Vector homework/files/src/: MVector.cpp  MVector.h
Vector homework/src/: main.cpp
lab2/: main.cpp
lab2/asd/: CMakeLists.txt
lab2/asd/src/: main.cpp  matrixLib.cpp  matrixLib.h
lab3/zad1i2/: CMakeLists.txt
lab3/zad1i2/include/: doors.h
lab3/zad1i2/src/: doors.cpp  main.cpp
lab3/zad3/: CMakeLists.txt
lab3/zad3/include/: palindrom.h
lab3/zad3/src/: main.cpp  (+1 more)
lab4/zad1/: CMakeLists.txt
lab4/zad2_4/: CMakeLists.txt
lab4/zad5_6/: CMakeLists.txt
lab5/: main.cpp
lab6/zad1/: Foo.cpp  Foo.h  zad1.cpp
lab6/zad2/: function.cpp  function.h  zad2.cpp
lab6/zad3/: function.cpp  function.h  zad3.cpp
lab6/zad4/: Variable.cpp  Variable.h  zad4.cpp
lab8/: ConsoleApplication1.cpp  Triple.cpp  Triple.h
nienazwany1/: CMakeLists.txt  addvehicle.cpp  addvehicle.h  addvehicle.ui  bike.cpp  bike.h  car.cpp  car.h  displaywindow.cpp  displaywindow.h  displaywindow.ui  editvehicle.cpp  editvehicle.h  editvehicle.ui  function.cpp  function.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  motorbike.cpp  motorbike.h  person.cpp  person.h  rentvehicle.cpp  rentvehicle.h  rentvehicle.ui  returnwindow.cpp  returnwindow.h  returnwindow.ui  scooter.cpp  scooter.h  vehicle.cpp  vehicle.h
projekt/: CMakeLists.txt
projekt/include/: bike.h  car.h  function.h  motorbike.h  person.h  scooter.h  vehicle.h
projekt/src/: bike.cpp  car.cpp  function.cpp  main.cpp  motorbike.cpp  person.cpp  scooter.cpp  vehicle.cpp
(+18 files in other folders)
